<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tvRecuperarCuenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="130dp"
            android:text="@string/tvRCuenta"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCorreo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Correo"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRecuperarCuenta">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvCorreoRCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRecuperarCuenta"
            android:layout_width="207dp"
            android:layout_height="48dp"
            android:text="@string/btnRcuenta"
            android:backgroundTint="@color/piel"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCorreo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvRCuentaPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRCuentaPregunta"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/btnRecuperarCuenta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvRegistroInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRegistroLogin"
            android:textColor="#3D9AEC"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tvRCuentaPregunta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
